--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "population-restorator"
-version = "0.1.1"
+version = "0.2.0"
 description = "An utility to model city population based on buildings living area and total population number"
 authors = ["Aleksei Sokol <kanootoko@gmail.com>"]
 license = "MIT"
@@ -32,6 +32,7 @@ loguru = "^0.7.0"
 openpyxl = "^3.1.2"
 rich = "^13.4.2"
 tqdm = "^4.65.0"
+sqlalchemy = "^2.0.20"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
