--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ openpyxl = "^3.1.2"
 rich = "^13.4.2"
 tqdm = "^4.65.0"
 sqlalchemy = "^2.0.20"
+pydantic = "^2.10.6"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
